Updating makefile for heap sort

--- a/C++/Sorting/makefile
+++ b/C++/Sorting/makefile
@@ -1,4 +1,10 @@
-OBJS = main.o bubbleSort.o selectionSort.o common.o
+OBJS = main.o \
+ 	bubbleSort.o \
+ 	selectionSort.o \
+ 	insertionSort.o \
+ 	mergeSort.o \
+ 	heapSort.o \
+ 	common.o
 CC = g++
 DEBUG = -g
 CFLAGS = -Wall -c $(DEBUG)
@@ -21,6 +27,21 @@ selectionSort.o: \
 	selectionSort.cpp selectionSort.h \
 	common.cpp
 	$(CC) $(CFLAGS) selectionSort.cpp
+
+insertionSort.o: \
+	insertionSort.cpp insertionSort.h \
+	common.cpp
+	$(CC) $(CFLAGS) insertionSort.cpp
+
+mergeSort.o: \
+	mergeSort.cpp mergeSort.h \
+	common.cpp
+	$(CC) $(CFLAGS) mergeSort.cpp
+
+heapSort.o: \
+	heapSort.cpp heapSort.h \
+	common.cpp
+	$(CC) $(CFLAGS) heapSort.cpp
 
 common.o: \
 	common.cpp common.h
